--- a/polina_config.json
+++ b/polina_config.json
@@ -20,6 +20,10 @@
             "LABEL=xxx1 /mnt/xxx1 ext4 defaults,noatime,nofail 0 4",
             "LABEL=xxx2 /mnt/xxx2 ext4 defaults,noatime,nofail 0 5"
         ],
+        "/etc/lightdm/lightdm-gtk-greeter.conf": [
+            "background=/usr/share/backgrounds/20210420-015850.png",
+            "user-background=false"
+        ],
         "/etc/locale.conf": [
             "LC_TIME=ru_RU.UTF-8"
         ],
@@ -30,12 +34,9 @@
             "* hard nofile 65535",
             "* soft nofile 65535"
         ],
-        "/etc/tor/torrc": [
-            "SocksPort 127.0.0.1:9100"
-        ],
         "/home/chaos/.bashrc": [
             "PS1='$? \\[\\e[1;32m\\]\\w\\[\\e[m\\] $ '",
-            "alias dcu='docker-compose up'",
+            "alias dc='docker-compose'",
             "alias fs='VKD3D_CONFIG=no_upload_hvv firejail --net=none --noprofile steam'",
             "alias gta5='WINEDLLOVERRIDES=winedbg.exe=d steam'",
             "alias nrb='npm run build'",
@@ -43,10 +44,29 @@
             "alias pr='sudo ~/Documents/python/tools/polina.py rebuild'",
             "alias tr1='pp_jimenezmlaa_color=8 firejail --net=none --noprofile mangohud steam'"
         ],
+        "/home/chaos/.config/gtk-4.0/settings.ini": [
+            "gtk-font-name=Sans 10.4"
+        ],
+        "/home/chaos/.config/i3/config": [
+            "bindsym Print exec --no-startup-id xfce4-screenshooter -f -s ~/Pictures/Screenshots/`date +'%Y%m%d-%H%M%S'`.png",
+            "exec --no-startup-id /usr/libexec/xfce-polkit",
+            "exec --no-startup-id corectrl",
+            "exec --no-startup-id firefox",
+            "exec --no-startup-id pipewire",
+            "exec --no-startup-id setxkbmap -layout us,ru -option 'grp:caps_toggle,grp_led:scroll'",
+            "exec --no-startup-id xinput --set-prop 'Logitech G500s Laser Gaming Mouse' 'libinput Accel Profile Enabled' 0 1",
+            "exec --no-startup-id xinput --set-prop 'Logitech G500s Laser Gaming Mouse' 'libinput Accel Speed' -0.3",
+            "exec --no-startup-id xset -dpms",
+            "exec --no-startup-id xset r rate 300",
+            "exec --no-startup-id xset s off",
+            "hide_edge_borders both",
+            "workspace_layout tabbed"
+        ],
         "/home/chaos/.config/rofi/config.rasi": [
             "@theme \"/usr/share/rofi/themes/Arc-Dark.rasi\""
         ],
         "/home/chaos/.config/sway/config": [
+            "# seat * hide_cursor when-typing enable",
             "bindsym $mod+g exec gthumb",
             "bindsym $mod+m exec gnome-system-monitor",
             "bindsym $mod+n exec nautilus",
@@ -75,13 +95,16 @@
             "input type:pointer accel_profile flat",
             "input type:pointer pointer_accel -0.3",
             "output * subpixel none",
-            "seat * hide_cursor when-typing enable",
             "seat * xcursor_theme Adwaita",
             "titlebar_padding 5 3",
             "workspace_layout tabbed"
         ],
         "/home/chaos/.nanorc": [
             "include /usr/share/nano/*.nanorc"
+        ],
+        "/home/chaos/.Xresources": [
+            "Xcursor.theme: Adwaita",
+            "Xft.hintstyle: hintslight"
         ],
         "/home/chaos/tmp/mh": [
             "core_load",
@@ -115,7 +138,7 @@
             "vkbasalt",
             "vulkan_driver",
             "wine",
-            "custom_text = linux, void, gnome, x11"
+            "custom_text = linux, void, i3, x11"
         ],
         "/root/.bash_history": [
             "grub-install --target=x86_64-efi --efi-directory=/boot/efi --bootloader-id='alisa'",
@@ -127,6 +150,12 @@
     },
     "insert": {
         "/home/chaos/.config/sway/config": {
+        "/home/chaos/.config/i3/config": {
+            "190": [
+                "        position top",
+                "        tray_output none"
+            ]
+        },
             "214": [
                 "        focused_workspace #d8dee9e6 #d8dee9e6 #000000"
             ],
@@ -156,6 +185,48 @@
             ]
         ],
         "/home/chaos/.config/sway/config": [
+        "/home/chaos/.config/i3/config": [
+            [
+                "exec --no-startup-id nm-applet",
+                ""
+            ],
+            [
+                "bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status",
+                "bindsym F12 exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+"
+            ],
+            [
+                "bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status",
+                "bindsym F11 exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-"
+            ],
+            [
+                "bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status",
+                "bindsym F10 exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle"
+            ],
+            [
+                "bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status",
+                "bindsym Ctrl+F10 exec --no-startup-id amixer set Capture toggle"
+            ],
+            [
+                "bindsym $mod+Return exec i3-sensible-terminal",
+                "bindsym $mod+Return exec konsole"
+            ],
+            [
+                "bindsym $mod+Shift+q kill",
+                "bindsym Ctrl+q kill"
+            ],
+            [
+                "bindsym $mod+d exec --no-startup-id dmenu_run",
+                "bindsym $mod+d exec --no-startup-id rofi -show drun"
+            ],
+            [
+                "bindsym $mod+Shift+e exec \"i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'\"",
+                "bindsym $mod+Shift+e exec \"pkill pipewire; i3-msg exit\""
+            ],
+            [
+                "status_command i3status",
+                "status_command while date +'%Y-%m-%d %H:%M %p'; do sleep 1; done"
+            ]
+        ],
             [
                 "bindsym $mod+Shift+q kill",
                 "bindsym Ctrl+q kill"
@@ -166,7 +237,7 @@
             ],
             [
                 "/usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png",
-                "/home/chaos/Pictures/181222___ho_ho_ho_by_zfirrr_dcv1sh5.jpg"
+                "/home/chaos/Pictures/Screenshots/20210420-015850.png"
             ],
             [
                 "date +'%Y-%m-%d %I:%M:%S %p'",
